--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -1,4 +1,70 @@
-﻿body 
+﻿body
 {
-    font-family:Verdana
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #f5f5f5;
+    font-family: Georgia;
+    font-size: 14px;
+}
+
+input[type="text"], input[type="password"], input[type="submit"], button
+{
+    display: block;
+}
+input[type="text"], input[type="password"], input[type="submit"]
+{
+    font-size: 14px;
+    padding: 5px;
+    min-height: 15px;
+}
+
+.form-signin
+{
+    max-width: 300px;
+    padding: 10px;
+    margin: 0 auto 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: 10px;
+}
+
+input[type="submit"], button
+{
+    font-weight: bold;
+    margin: 10px;
+    background-color: Gray;
+    min-height: 40px;
+    min-width: 10 0px !important;
+}
+
+
+
+.btn
+{
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 10px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 14px !important;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    min-width: 80px;
+}
+
+.btn:hover
+{
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
 }
