Applied css to the web  pages...

--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -1,16 +1,15 @@
 ﻿body
 {
-    padding-top: 10px;
-    padding-bottom: 10px;
     background-color: #f5f5f5;
     font-family: Georgia;
     font-size: 14px;
 }
 
-input[type="text"], input[type="password"], input[type="submit"], button
+input[type="text"], input[type="password"]
 {
     display: block;
 }
+
 input[type="text"], input[type="password"], input[type="submit"]
 {
     font-size: 14px;
