Worked on css of the pages

--- a/SourceCode/WeShare/Styles/menustyle.css
+++ b/SourceCode/WeShare/Styles/menustyle.css
@@ -22,9 +22,9 @@ ul#css3menu1 ul>li{
 ul#css3menu1 a:active, ul#css3menu1 a:focus{
 	outline-style:none;}
 ul#css3menu1 a{
-	display:block;vertical-align:middle;text-align:left;text-decoration:none;font:bold 12px Arial;color:#cccccc;cursor:default;padding:10px;background-color:#333;background-image:url("mainbk.png");background-repeat:repeat;background-position:0 200px;border-width:0px;border-style:none;border-color:;}
+	display:block;vertical-align:middle;text-align:left;text-decoration:none;font:bold 16px Arial;color:#cccccc;cursor:default;padding:10px;background-color:#333;background-image:url("mainbk.png");background-repeat:repeat;background-position:0 200px;border-width:0px;border-style:none;border-color:;}
 ul#css3menu1 ul li{
-	float:none;margin:9px 0 0;}
+	float:none;margin:9px 0 0; vertical-align:middle;}
 ul#css3menu1 ul a{
 	text-align:left;padding:8px 0 0 0;background-color:#333;background-image:none;border-width:1px 0 0 0;border-style:solid;border-color:#262626;border-radius:0px;-moz-border-radius:0px;-webkit-border-radius:0px;font:13px Arial;color:#cccccc;text-decoration:none;}
 ul#css3menu1 li:hover>a,ul#css3menu1 li a.pressed{
