--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -1,45 +1,22 @@
-﻿body
-{
-    background-color: #f5f5f5;
-    font-family: Georgia;
-    font-size: 14px;
-}
+﻿body { background-color: #f5f5f5; font-family: Verdana; font-size: 14px; }
 
-input[type="text"], input[type="password"]
-{
-    display: block;
-}
+#topdiv { font-size: 16px !important; }
 
-input[type="text"], input[type="password"], input[type="submit"]
-{
-    font-size: 14px;
-    padding: 5px;
-    min-height: 15px;
-}
+input[type="text"], input[type="password"] { display: block;}
+input[type="text"], input[type="password"] , select {width:90%;}
 
-.form-signin
-{
-    max-width: 300px;
-    padding: 10px;
-    margin: 0 auto 20px;
-    background-color: #fff;
-    border: 1px solid #e5e5e5;
-    border-radius: 10px;
-}
+input[type="text"], input[type="password"], input[type="submit"],select
+{ font-size: 14px; padding: 5px; min-height: 15px;  }
 
-input[type="submit"], button
-{
-    font-weight: bold;
-    margin: 10px;
-    background-color: Gray;
-    min-height: 40px;
-    min-width: 10 0px !important;
-}
+input[type="submit"] {min-width:100px;}
 
+.form-signin { max-width: 300px; padding: 10px; margin: 0 auto 20px;
+    background-color: #fff; border: 1px solid #e5e5e5; border-radius: 10px; }
 
+input[type="submit"], button { font-weight: bold; margin: 10px; background-color: Gray; min-height: 40px;
+    min-width: 10 0px !important; }
 
-.btn
-{
+.btn {
     background: #3498db;
     background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
     background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -57,8 +34,7 @@ input[type="submit"], button
     min-width: 80px;
 }
 
-.btn:hover
-{
+.btn:hover {
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
     background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -67,23 +43,17 @@ input[type="submit"], button
     background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
 }
-.gridcontainer
-{
-    padding: 10px;
-}
 
-.gridcontainer div
-{
-    padding: 0px !important;
-}
+.grid {padding: 10px; width: 60%;}
 
-.gridcontainer h1
-{
-    background-color: #D3CFCF !important;
-    border-radius: 5px;
-}
+.gridcontainer { padding: 10px;}
 
-.gridcontainer table
-{
-    min-width: 40%;
-}
+.gridcontainer div { padding: 0px !important; }
+
+.gridcontainer h1 { background-color: #D3CFCF !important; border-radius: 5px; }
+
+.gridcontainer table { min-width: 40%;}
+
+.inputcontainer { padding: 10px; text-align:left; }
+
+#css3menu1 a { font-size:18px; height: 30px; line-height: 30px; }
