--- a/SourceCode/WeShare/WebForms/WeShare.Master
+++ b/SourceCode/WeShare/WebForms/WeShare.Master
@@ -6,8 +6,8 @@
     <title>We Share</title>
     <script type="text/javascript" src="../Scripts/jquery.js"></script>
     <link type="text/css" href="../Styles/jquery-ui.css" rel="stylesheet" />
+     <link href="../Styles/weshare.css" rel="stylesheet" type="text/css" />
     <link href="../Styles/menustyle.css" rel="stylesheet" type="text/css" />
-    <link href="../Styles/weshare.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../Scripts/jquery-ui.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -20,8 +20,8 @@
         <ul id="css3menu1" class="topmenu">
             <%-- <input type="checkbox" id="css3menu-switcher" class="switchbox"><label onclick=""
                 class="switch" for="css3menu-switcher"></label>--%>
-            <li class="topfirst"><a href="Home.aspx" style="height: 15px; line-height: 15px;">Home</a></li>
-            <li class="topmenu"><a href="ManageUsers.aspx" style="height: 15px; line-height: 15px;">
+            <li class="topfirst"><a href="Home.aspx" >Home</a></li>
+            <li class="topmenu"><a href="ManageUsers.aspx" >
                 <span>Manage Users</span></a>
                 <%-- <ul>
                     <li class="subfirst"><a href="#">Item 1 0</a></li>
@@ -29,9 +29,9 @@
                     <li><a href="#">Item 1 2</a></li>
                 </ul>--%>
             </li>
-            <li class="topmenu"><a href="ManageTasks.aspx" style="height: 15px; line-height: 15px;">
+            <li class="topmenu"><a href="ManageTasks.aspx" >
                 Manage Tasks</a></li>
-            <li class="toplast"><a href="AssignTasks.aspx" style="height: 15px; line-height: 15px;">
+            <li class="toplast"><a href="AssignTasks.aspx" >
                 Assign Tasks</a></li>
         </ul>
     </div>
