--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -50,7 +50,7 @@ input[type="submit"], button { font-weight: bold; margin: 10px; background-color
 
 .gridcontainer div { padding: 0px !important; }
 
-.gridcontainer h1 { background-color: #D3CFCF !important; border-radius: 5px; font-size:16px;padding:4px;}
+.gridcontainer h1, .grid h1 { background-color: #D3CFCF !important; border-radius: 5px; font-size:16px;padding:4px;}
 
 .gridcontainer table { min-width: 40%;}
 
