--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -1,22 +1,57 @@
-﻿body { background-color: #f5f5f5; font-family: Verdana; font-size: 14px; }
+﻿body
+{
+    background-color: #f5f5f5;
+    font-family: Verdana;
+    font-size: 14px;
+}
 
-#topdiv { font-size: 16px !important; }
+#topdiv
+{
+    font-size: 16px !important;
+}
 
-input[type="text"], input[type="password"] { display: block;}
-input[type="text"], input[type="password"] , select {width:90%;}
+input[type="text"], input[type="password"]
+{
+    display: block;
+}
+input[type="text"], input[type="password"], select
+{
+    width: 90%;
+}
 
-input[type="text"], input[type="password"], input[type="submit"],select
-{ font-size: 14px; padding: 5px; min-height: 15px;  }
+input[type="text"], input[type="password"], input[type="submit"], select
+{
+    font-size: 14px;
+    padding: 5px;
+    min-height: 15px;
+}
 
-input[type="submit"] {min-width:100px;}
+input[type="submit"]
+{
+    min-width: 100px;
+}
 
-.form-signin { max-width: 300px; padding: 10px; margin: 0 auto 20px;
-    background-color: #fff; border: 1px solid #e5e5e5; border-radius: 10px; }
+.form-signin
+{
+    max-width: 300px;
+    padding: 10px;
+    margin: 0 auto 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: 10px;
+}
 
-input[type="submit"], button { font-weight: bold; margin: 10px; background-color: Gray; min-height: 40px;
-    min-width: 10 0px !important; }
+input[type="submit"], button
+{
+    font-weight: bold;
+    margin: 10px;
+    background-color: Gray;
+    min-height: 40px;
+    min-width: 10 0px !important;
+}
 
-.btn {
+.btn
+{
     background: #3498db;
     background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
     background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -34,7 +69,8 @@ input[type="submit"], button { font-weight: bold; margin: 10px; background-color
     min-width: 80px;
 }
 
-.btn:hover {
+.btn:hover
+{
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
     background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -44,19 +80,63 @@ input[type="submit"], button { font-weight: bold; margin: 10px; background-color
     text-decoration: none;
 }
 
-.grid {padding: 10px; width: 60%;}
+.grid
+{
+    padding: 10px;
+    width: 60%;
+}
 
-.gridcontainer { padding: 10px;}
+.gridcontainer
+{
+    padding: 10px;
+}
 
-.gridcontainer div { padding: 0px !important; }
+.gridcontainer div
+{
+    padding: 0px !important;
+}
 
-.gridcontainer h1, .grid h1 { background-color: #D3CFCF !important; border-radius: 5px; font-size:16px;padding:4px;}
+.gridcontainer h1, .grid h1
+{
+    background-color: #D3CFCF !important;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 4px;
+}
 
-.gridcontainer table { min-width: 40%;}
+.gridcontainer table
+{
+    min-width: 40%;
+}
 
-.inputcontainer { padding: 10px; text-align:left; }
+.inputcontainer
+{
+    padding: 10px;
+    text-align: left;
+}
 
-#css3menu1 a { font-size:14px; height: 20px; line-height: 20px; }
-.emptytable {width:100%;}
-.emptytable th{background-color:LightBlue; }
-.emptytable  td {text-align:center;}
+#css3menu1 a
+{
+    font-size: 14px;
+    height: 20px;
+    line-height: 20px;
+}
+.emptytable
+{
+    width: 100%;
+}
+.emptytable th
+{
+    background-color: LightBlue;
+}
+.emptytable td
+{
+    text-align: center;
+}
+
+
+.error
+{
+    color: Red;
+    display: block !important;
+}
