Implemented assignment of users to groups fuunctionality

--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -129,3 +129,8 @@ th {width:35%;text-align:left;}
     color: Red;
     display: block !important;
 }
+
+.imagebutton
+{width:18px;
+ height:15px;
+}
