--- a/SourceCode/WeShare/WebForms/WeShare.Master
+++ b/SourceCode/WeShare/WebForms/WeShare.Master
@@ -6,7 +6,7 @@
     <title>We Share</title>
     <script type="text/javascript" src="../Scripts/jquery.js"></script>
     <link type="text/css" href="../Styles/jquery-ui.css" rel="stylesheet" />
-     <link href="../Styles/weshare.css" rel="stylesheet" type="text/css" />
+    <link href="../Styles/weshare.css" rel="stylesheet" type="text/css" />
     <link href="../Styles/menustyle.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../Scripts/jquery-ui.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -20,19 +20,18 @@
         <ul id="css3menu1" class="topmenu">
             <%-- <input type="checkbox" id="css3menu-switcher" class="switchbox"><label onclick=""
                 class="switch" for="css3menu-switcher"></label>--%>
-            <li class="topfirst"><a href="Home.aspx" >Home</a></li>
-            <li class="topmenu"><a href="ManageUsers.aspx" >
-                <span>Manage Users</span></a>
+            <li class="topfirst"><a href="Home.aspx">Home</a></li>
+            <li class="topmenu"><a href="ManageGroups.aspx">Manage Groups</a></li>
+            <li class="topmenu"><a href="ManageUsers.aspx">Manage Users</a></li>
+            <li class="topmenu"><a href="ManageUsersDetails.aspx"><span>Manage User Details</span></a>
                 <%-- <ul>
                     <li class="subfirst"><a href="#">Item 1 0</a></li>
                     <li><a href="#">Item 1 1</a></li>
                     <li><a href="#">Item 1 2</a></li>
                 </ul>--%>
             </li>
-            <li class="topmenu"><a href="ManageTasks.aspx" >
-                Manage Tasks</a></li>
-            <li class="toplast"><a href="AssignTasks.aspx" >
-                Assign Tasks</a></li>
+            <li class="topmenu"><a href="ManageTasks.aspx">Manage Tasks</a></li>
+            <li class="toplast"><a href="AssignTasks.aspx">Assign Tasks</a></li>
         </ul>
     </div>
     <div>
