--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -3,6 +3,7 @@
     background-color: #f5f5f5;
     font-family: Verdana;
     font-size: 12px;
+    padding-top: 70px;
 }
 
 #topdiv
@@ -24,9 +25,25 @@ input, select
 
 input[type="submit"]
 {
-    min-width: 50px;
+    min-width: 90px;
+   
+    
+   
 }
-
+.col-sm-2 control-label
+{
+    text-align:left;
+}
+.form-group
+{
+    text-align:left;
+    padding: 50px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-right: 70px;
+    
+    
+}
 .form-signin
 {
     max-width: 300px;
@@ -36,7 +53,15 @@ input[type="submit"]
     border: 1px solid #e5e5e5;
     border-radius: 10px;
 }
-
+.form-inline
+{
+    
+    padding: 10px;
+    
+    margin:15px 3px;
+    
+    
+}
 .btn
 {
     background: #3498db;
@@ -102,6 +127,8 @@ input[type="submit"]
 {
     padding: 10px;
     text-align: left;
+    width:80%;
+    
 }
 
 #css3menu1 a
@@ -131,6 +158,6 @@ th {width:35%;text-align:left;}
 }
 
 .imagebutton
-{width:18px;
- height:15px;
+{width:25px;
+ height:25px;
 }
