modified the layout of the pages using bootstrap css

--- a/SourceCode/WeShare/Styles/weshare.css
+++ b/SourceCode/WeShare/Styles/weshare.css
@@ -163,3 +163,5 @@ th {width:35%;text-align:left;}
 }
 
 .gridheader {background-color:#C0C0C0 !important;}
+
+input[type="radio"] {padding:0px 5px 0px 5px;}
